# Serializer

./: CMakeLists.txt  Commands.hpp  Compare.md  README.md  Serializer.hpp  main.cpp
src/: command_type.hpp  main.cpp  user_commands.hpp
src/PacketForge/: command_factory.cpp  command_factory.hpp
src/PacketForge/basic_type_handlers/: int_handlers.cpp  int_handlers.hpp  string_handlers.cpp  string_handlers.hpp
src/PacketForge/core/: command_serializers.cpp  command_serializers.hpp  packet.cpp  packet.hpp  serialization_base.hpp  serializer_traits.hpp
src/PacketForge/core/header_repository/: command_type.hpp  deserializer_header_repository.cpp  deserializer_header_repository.hpp  header_repository.cpp  header_repository.hpp  header_repository_node.cpp  header_repository_node.hpp  serializer_header_repository.cpp  serializer_header_repository.hpp
